<resources>
    <string name="app_name">KNXBank</string>
    <string name="knxLogo" translatable="false">Logo</string>
    <string name="app_title" translatable="false">KNXBank</string>
    <string name="register_description">To register please fill the following Information</string>
    <string name="first_names_hint">First Names</string>
    <string name="last_names_hint">Last Names</string>
    <string name="Years_register">How old are you?</string>
    <string name="id_number_hint">ID Number</string>
    <string name="create_password_hint">Create Password</string>
    <string name="email_hint">Email</string>
    <string name="register_button">Register</string>
    <string name="already_register_login_here_button">Already Register? Login here</string>
    <string name="login_description">To login please fill the following fields</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="Register_text">No register?, do it Here</string>
    <string name="phoneNumberHint">Phone Number</string>
    <string name="phoneError">A phone number is required</string>
    <string name="phonelenght">Enter a Valid phone number with +(country code)</string>
    <string name="verificationDescription">A verification code has been sent to your phone</string>
    <string name="verificationCodeHint">Verification code</string>
    <string name="verifyCodeButton">Verify code</string>
    <string name="title_activity_wallet" translatable="false">WalletActivity</string>
    <string name="codeVerification">Enter a valid Code</string>
    <string name="thisMonthText">This month</string>
    <string name="receivedText">Received</string>
    <string name="currentBalanceText">Current Balance</string>
    <string name="sentText">Sent</string>
    <string name="generalText">GENERAL</string>
    <string name="app_info">App Info</string>
    <string name="notifications">Notifications</string>
    <string name="password">Password</string>
    <string name="otherText">Other</string>
    <string name="newAccDescription">To open the Account fill this information</string>
    <string name="account_details">Account Details</string>
    <string name="personal_details">Personal Details</string>
    <string name="friends">Friends</string>
    <string name="logout">Logout</string>
    <string name="WelcomeMessage">Welcome to KNXBank</string>

</resources>
